--- a/.github/workflows/azureDeploy.yml
+++ b/.github/workflows/azureDeploy.yml
@@ -24,5 +24,5 @@ jobs:
         uses: actions/webapps-deploy@v2
         with: 
           app-name: ets-web
-          publish-profile: ${{ SECRETS.AZURE_PUBLISH_PROFILE }}
+          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           package: .
