--- a/.github/workflows/azureDeploy.yml
+++ b/.github/workflows/azureDeploy.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install
 
       - name: Deploy to Azure App Service
-        uses: actions/webapps-deploy@v2
+        uses: azure/webapps-deploy@v2
         with: 
           app-name: ets-web
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
