--- a/package.json
+++ b/package.json
@@ -1,35 +1,16 @@
 {
-  "name": "tool-manager",
-  "version": "1.5.0",
-  "description": "*Dynamic Duo 2.0*",
-  "main": "index.js",
+  "name": "expressapp",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "jest --passWithNoTests",
-    "start": "nodemon server.js"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/PeterMontez/Dynamic-Duo-2.0.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/PeterMontez/Dynamic-Duo-2.0/issues"
-  },
-  "homepage": "https://github.com/PeterMontez/Dynamic-Duo-2.0#readme",
   "dependencies": {
-    "axios": "^1.7.5",
-    "ejs": "^3.1.8",
-    "express": "^4.18.2",
-    "firebase": "^10.13.0",
-    "firebase-admin": "^12.4.0",
-    "global-agent": "^3.0.0",
-    "hpagent": "^1.2.0",
-    "https-proxy-agent": "^7.0.5",
-    "mssql": "^9.1.1",
-    "nodemon": "^2.0.20",
-    "request": "^2.88.2",
-    "sequelize": "^6.28.0"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1"
   }
 }
